tests/ui/rfcs/rfc-2093-infer-outlives/explicit-union.stderr
error: rustc_outlives
  --> $DIR/explicit-union.rs:4:1
   |
LL | union Foo<'b, U: Copy> {
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: U: 'b

error: aborting due to previous error

